--- a/scss/base/_header.scss
+++ b/scss/base/_header.scss
@@ -22,7 +22,7 @@
 }
 
 #container {
-    height: 100%;
+    height: auto;
 }
 
 #container {
